swim_client/src/configuration/tests/resources/invalid/unnamed-record-nested.recon
@config {
    @client {
        buffer_size: 2
        router: {
            retry_strategy: @exponential(max_interval: 16, max_backoff: 300)
            idle_timeout: 60
            conn_reaper_frequency: 60
            buffer_size: 100
        }
    }
    {
        back_pressure: @propagate()
        mux_mode: @queue(queue_size: 5)
        idle_timeout: 60000
        buffer_size: 5
        on_invalid: "terminate"
        yield_after: 256
    }
}